More performance changes

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,51 +1,56 @@
-# Voice Agent Ops - MVP Backend Environment Variables# Environment Configuration
-
+# =============================================================================
+# Call Yala - Environment Configuration
+# =============================================================================
 # Copy this file to .env and fill in the values
 
-# App
+# -----------------------------------------------------------------------------
+# App Settings
+# -----------------------------------------------------------------------------
+APP_ENV=local                     # local, development, production
+PORT=8000                         # Server port
+MOCK_MODE=false                   # Set to true to use mock data (no API calls)
+DEFAULT_TIMEZONE=America/New_York # Your timezone
 
-APP_ENV=local# Database
+# -----------------------------------------------------------------------------
+# Google Sheets Integration
+# -----------------------------------------------------------------------------
+# 1. Create a Google Cloud project: https://console.cloud.google.com
+# 2. Enable Google Sheets API
+# 3. Create a Service Account and download the JSON key
+# 4. Place the JSON file at ./secrets/service_account.json
+# 5. Share your Google Sheet with the service account email
+GOOGLE_SHEETS_SPREADSHEET_ID=    # The ID from your Google Sheet URL
+GOOGLE_SHEETS_RANGE=Sheet1!A1:Z  # Range to read (or leave default for full sheet)
+GOOGLE_SERVICE_ACCOUNT_JSON_PATH=./secrets/service_account.json
 
-PORT=8000DATABASE_URL=postgresql+asyncpg://postgres:postgres@localhost:5432/voice_agent_ops
+# -----------------------------------------------------------------------------
+# ElevenLabs Voice AI
+# -----------------------------------------------------------------------------
+# 1. Sign up at https://elevenlabs.io
+# 2. Get your API key from Settings
+# 3. Create a Conversational AI agent and get the agent ID
+# 4. (Optional) Set up a phone number for outbound calls
+ELEVENLABS_API_KEY=              # Your ElevenLabs API key
+ELEVENLABS_AGENT_ID=             # Your Conversational AI agent ID
+ELEVENLABS_PHONE_NUMBER_ID=      # Phone number ID for outbound calls
+ELEVENLABS_WEBHOOK_SECRET=       # Webhook secret for verifying callbacks
 
-DATA_DIR=./data
+# -----------------------------------------------------------------------------
+# Anthropic Claude AI
+# -----------------------------------------------------------------------------
+# 1. Sign up at https://console.anthropic.com
+# 2. Create an API key
+ANTHROPIC_API_KEY=               # Your Anthropic API key for Claude
 
-# Redis (for background jobs and pub/sub)
+# -----------------------------------------------------------------------------
+# Optional: Advanced Settings
+# -----------------------------------------------------------------------------
+MAX_BATCH_SIZE=200               # Max calls per batch
+HTTP_TIMEOUT_SECONDS=30          # API timeout
+DATA_DIR=./data                  # Directory for local data storage
 
-# Google SheetsREDIS_URL=redis://localhost:6379/0
+# -----------------------------------------------------------------------------
+# CORS (comma-separated origins)
+# -----------------------------------------------------------------------------
+CORS_ORIGINS=http://localhost:8080,http://localhost:5173,http://localhost:3000
 
-GOOGLE_SHEETS_SPREADSHEET_ID=your-spreadsheet-id-here
-
-GOOGLE_SHEETS_RANGE=Sheet1!A1:Z# Security
-
-GOOGLE_SERVICE_ACCOUNT_JSON_PATH=./secrets/service_account.jsonJWT_SECRET=your-super-secret-key-change-in-production
-
-JWT_ALGORITHM=HS256
-
-# ElevenLabsJWT_EXPIRE_MINUTES=1440
-
-ELEVENLABS_API_KEY=your-elevenlabs-api-key
-
-ELEVENLABS_WEBHOOK_SECRET=your-webhook-secret# ElevenLabs Integration
-
-ELEVENLABS_AGENT_ID=your-agent-idELEVENLABS_API_KEY=your-elevenlabs-api-key
-
-ELEVENLABS_PHONE_NUMBER_ID=your-phone-number-idELEVENLABS_WEBHOOK_SECRET=your-webhook-secret-from-elevenlabs
-
-
-
-# Optional behavior# CORS (comma-separated origins)
-
-MOCK_MODE=falseCORS_ORIGINS=http://localhost:8080,http://localhost:3000
-
-DEFAULT_TIMEZONE=Asia/Kuwait
-
-MAX_BATCH_SIZE=200# App Settings
-
-HTTP_TIMEOUT_SECONDS=30APP_ENV=development
-
-DEBUG=true
-LOG_LEVEL=INFO
-
-# Optional: Default org for seeding
-DEFAULT_ORG_ID=
