--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,14 +1,25 @@
-# Voice Agent Ops - MVP Backend
+# Call Yala - Backend Dependencies
+# Core
 fastapi>=0.109.0
 uvicorn[standard]>=0.27.0
 pydantic>=2.5.0
 pydantic-settings>=2.1.0
 httpx>=0.26.0
+python-dotenv>=1.0.0
+python-multipart>=0.0.6
+
+# Google Sheets Integration
 google-api-python-client>=2.100.0
 google-auth>=2.25.0
 gspread>=5.12.0
+
+# ElevenLabs Voice AI
+# (Uses httpx for API calls - no additional package needed)
+
+# Anthropic Claude AI
+anthropic>=0.40.0
+
+# Utilities
 portalocker>=2.8.0
 phonenumbers>=8.13.0
 pytz>=2024.1
-python-dotenv>=1.0.0
-python-multipart>=0.0.6
