Callyala V0 alot of work left in progress

--- a/backend/.env
+++ b/backend/.env
@@ -1,5 +1,24 @@
 APP_ENV=local
 PORT=8000
 DATA_DIR=./data
-MOCK_MODE=true
+MOCK_MODE=false
 DEFAULT_TIMEZONE=Asia/Kuwait
+
+# =============================================================================
+# IMPORTANT: Add your real API keys here!
+# =============================================================================
+
+# Anthropic Claude AI - Get from: https://console.anthropic.com/settings/keys
+ANTHROPIC_API_KEY=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
+
+# ElevenLabs Voice AI - Get from: https://elevenlabs.io/app/settings/api-keys
+ELEVENLABS_API_KEY=sk_f24dea7ff1c330421dec34c3971360c390b6e1c3ad91ce09
+
+# ElevenLabs Agent ID - From: https://elevenlabs.io/app/conversational-ai
+ELEVENLABS_AGENT_ID=agent_3501kdgfqxhjfx8bs71qmgb30dgj
+
+# ElevenLabs Phone Number ID - From: https://elevenlabs.io/app/conversational-ai/phone-numbers
+ELEVENLABS_PHONE_NUMBER_ID=phnum_8901kdgfqh0xec1snhwhc7ydyxyj
+
+# Webhook secret for verifying callbacks
+ELEVENLABS_WEBHOOK_SECRET=
