🔧 Fix backend: ElevenLabs endpoint, Gemini integration, env config

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -36,11 +36,16 @@ ELEVENLABS_PHONE_NUMBER_ID=      # Phone number ID for outbound calls
 ELEVENLABS_WEBHOOK_SECRET=       # Webhook secret for verifying callbacks
 
 # -----------------------------------------------------------------------------
-# Anthropic Claude AI
+# Google Gemini AI
 # -----------------------------------------------------------------------------
-# 1. Sign up at https://console.anthropic.com
-# 2. Create an API key
-ANTHROPIC_API_KEY=               # Your Anthropic API key for Claude
+# 1. Sign up at https://aistudio.google.com
+# 2. Create an API key at https://aistudio.google.com/app/apikey
+GEMINI_API_KEY=                  # Your Google Gemini API key
+
+# -----------------------------------------------------------------------------
+# Demo Configuration
+# -----------------------------------------------------------------------------
+DEMO_PHONE_NUMBER=+96550525011   # All calls will go to this number for demo
 
 # -----------------------------------------------------------------------------
 # Optional: Advanced Settings
